# serializer version: 1
# name: TestMinitaurCostEqual.test_snapshot
  1.4921882851926276
# ---
# name: TestMinitaurCostEqual.test_snapshot.1
  1.4789271033865865
# ---
# name: TestMinitaurCostEqual.test_snapshot.10
  1.0663496355371027
# ---
# name: TestMinitaurCostEqual.test_snapshot.100
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.101
  dict({
    'cost_drift': 0.00026510064533499973,
    'cost_shake': 0.001545201927514478,
    'cost_velocity': 1.2628780090552525,
    'energy_cost': 0.20818703830012608,
  })
# ---
# name: TestMinitaurCostEqual.test_snapshot.102
  1.4545558312421683
# ---
# name: TestMinitaurCostEqual.test_snapshot.103
  1.6117357153245735
# ---
# name: TestMinitaurCostEqual.test_snapshot.104
  1.4075151555523995
# ---
# name: TestMinitaurCostEqual.test_snapshot.105
  1.6396477365894244
# ---
# name: TestMinitaurCostEqual.test_snapshot.106
  1.3025010248257614
# ---
# name: TestMinitaurCostEqual.test_snapshot.107
  1.721843549526664
# ---
# name: TestMinitaurCostEqual.test_snapshot.108
  1.3656871490104912
# ---
# name: TestMinitaurCostEqual.test_snapshot.109
  1.5795080865342341
# ---
# name: TestMinitaurCostEqual.test_snapshot.11
  1.0943587809259567
# ---
# name: TestMinitaurCostEqual.test_snapshot.110
  4.0987608316202575
# ---
# name: TestMinitaurCostEqual.test_snapshot.111
  -4.762556888733957
# ---
# name: TestMinitaurCostEqual.test_snapshot.112
  2.2002813098693443
# ---
# name: TestMinitaurCostEqual.test_snapshot.113
  25.53808932629984
# ---
# name: TestMinitaurCostEqual.test_snapshot.114
  -19.11056347163142
# ---
# name: TestMinitaurCostEqual.test_snapshot.115
  -0.23017069533937498
# ---
# name: TestMinitaurCostEqual.test_snapshot.116
  -8.760987035583328
# ---
# name: TestMinitaurCostEqual.test_snapshot.117
  -0.6161326682556563
# ---
# name: TestMinitaurCostEqual.test_snapshot.118
  1.199272224657645
# ---
# name: TestMinitaurCostEqual.test_snapshot.119
  -0.6339403199697413
# ---
# name: TestMinitaurCostEqual.test_snapshot.12
  0.995603541185548
# ---
# name: TestMinitaurCostEqual.test_snapshot.120
  -0.11231117189806678
# ---
# name: TestMinitaurCostEqual.test_snapshot.121
  5.7
# ---
# name: TestMinitaurCostEqual.test_snapshot.122
  -2.4722324662009885
# ---
# name: TestMinitaurCostEqual.test_snapshot.123
  0.2233009558749279
# ---
# name: TestMinitaurCostEqual.test_snapshot.124
  -0.5835839044021457
# ---
# name: TestMinitaurCostEqual.test_snapshot.125
  -0.08195822137720803
# ---
# name: TestMinitaurCostEqual.test_snapshot.126
  0.0015080091209053578
# ---
# name: TestMinitaurCostEqual.test_snapshot.127
  -0.005047252262417167
# ---
# name: TestMinitaurCostEqual.test_snapshot.128
  -0.0011210711906729715
# ---
# name: TestMinitaurCostEqual.test_snapshot.129
  0.9999854970710707
# ---
# name: TestMinitaurCostEqual.test_snapshot.13
  0.9624862628386269
# ---
# name: TestMinitaurCostEqual.test_snapshot.130
  1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.131
  -1.1436856755614642
# ---
# name: TestMinitaurCostEqual.test_snapshot.132
  -0.1436856755614642
# ---
# name: TestMinitaurCostEqual.test_snapshot.133
  1.3080169244844826
# ---
# name: TestMinitaurCostEqual.test_snapshot.134
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.135
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.136
  dict({
    'cost_drift': 0.0003031150414334095,
    'cost_shake': 0.0012169545336557508,
    'cost_velocity': 1.3080169244844826,
    'energy_cost': 0.41122465226046057,
  })
# ---
# name: TestMinitaurCostEqual.test_snapshot.137
  1.5341615570870843
# ---
# name: TestMinitaurCostEqual.test_snapshot.138
  1.667503345811441
# ---
# name: TestMinitaurCostEqual.test_snapshot.139
  1.336984693762328
# ---
# name: TestMinitaurCostEqual.test_snapshot.14
  1.001677592676643
# ---
# name: TestMinitaurCostEqual.test_snapshot.140
  1.6998782255887888
# ---
# name: TestMinitaurCostEqual.test_snapshot.141
  1.2846803432803098
# ---
# name: TestMinitaurCostEqual.test_snapshot.142
  1.6870219142241003
# ---
# name: TestMinitaurCostEqual.test_snapshot.143
  1.4158688126858348
# ---
# name: TestMinitaurCostEqual.test_snapshot.144
  1.409299290532422
# ---
# name: TestMinitaurCostEqual.test_snapshot.145
  2.27414898187841
# ---
# name: TestMinitaurCostEqual.test_snapshot.146
  4.963395768653195
# ---
# name: TestMinitaurCostEqual.test_snapshot.147
  -8.01643431072371
# ---
# name: TestMinitaurCostEqual.test_snapshot.148
  3.9373116427800157
# ---
# name: TestMinitaurCostEqual.test_snapshot.149
  7.569080022380718
# ---
# name: TestMinitaurCostEqual.test_snapshot.15
  0.9839904897221291
# ---
# name: TestMinitaurCostEqual.test_snapshot.150
  -4.57929638695922
# ---
# name: TestMinitaurCostEqual.test_snapshot.151
  12.740169561588154
# ---
# name: TestMinitaurCostEqual.test_snapshot.152
  -26.5732373271626
# ---
# name: TestMinitaurCostEqual.test_snapshot.153
  5.7
# ---
# name: TestMinitaurCostEqual.test_snapshot.154
  2.336953272639927
# ---
# name: TestMinitaurCostEqual.test_snapshot.155
  -0.032444422912505363
# ---
# name: TestMinitaurCostEqual.test_snapshot.156
  3.335296380285704
# ---
# name: TestMinitaurCostEqual.test_snapshot.157
  2.3368391745171873
# ---
# name: TestMinitaurCostEqual.test_snapshot.158
  -0.6987519149533734
# ---
# name: TestMinitaurCostEqual.test_snapshot.159
  2.9824401251824773
# ---
# name: TestMinitaurCostEqual.test_snapshot.16
  0.47928237547358815
# ---
# name: TestMinitaurCostEqual.test_snapshot.160
  -4.0975567633530865
# ---
# name: TestMinitaurCostEqual.test_snapshot.161
  0.0036768238712320666
# ---
# name: TestMinitaurCostEqual.test_snapshot.162
  -0.009422872678285548
# ---
# name: TestMinitaurCostEqual.test_snapshot.163
  -0.0014361066766253082
# ---
# name: TestMinitaurCostEqual.test_snapshot.164
  0.9999478126554016
# ---
# name: TestMinitaurCostEqual.test_snapshot.165
  1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.166
  -1.0292195060479763
# ---
# name: TestMinitaurCostEqual.test_snapshot.167
  -0.029219506047976396
# ---
# name: TestMinitaurCostEqual.test_snapshot.168
  1.0592927916296404
# ---
# name: TestMinitaurCostEqual.test_snapshot.169
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.17
  0.5837120895589282
# ---
# name: TestMinitaurCostEqual.test_snapshot.170
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.171
  dict({
    'cost_drift': 0.0007753196086186459,
    'cost_shake': 0.0010624252806621381,
    'cost_velocity': 1.0592927916296404,
    'energy_cost': 0.4114474382080177,
  })
# ---
# name: TestMinitaurCostEqual.test_snapshot.172
  1.569906766790782
# ---
# name: TestMinitaurCostEqual.test_snapshot.173
  1.7331056888843241
# ---
# name: TestMinitaurCostEqual.test_snapshot.174
  1.3237133707193192
# ---
# name: TestMinitaurCostEqual.test_snapshot.175
  1.742273610524191
# ---
# name: TestMinitaurCostEqual.test_snapshot.176
  1.5302292288489472
# ---
# name: TestMinitaurCostEqual.test_snapshot.177
  1.8004621273218768
# ---
# name: TestMinitaurCostEqual.test_snapshot.178
  1.640664527740089
# ---
# name: TestMinitaurCostEqual.test_snapshot.179
  1.2725314936086671
# ---
# name: TestMinitaurCostEqual.test_snapshot.18
  0.5257100908059869
# ---
# name: TestMinitaurCostEqual.test_snapshot.180
  4.539298372549965
# ---
# name: TestMinitaurCostEqual.test_snapshot.181
  7.723891293735937
# ---
# name: TestMinitaurCostEqual.test_snapshot.182
  -0.5936666290000421
# ---
# name: TestMinitaurCostEqual.test_snapshot.183
  3.4213390772054755
# ---
# name: TestMinitaurCostEqual.test_snapshot.184
  33.03323435301229
# ---
# name: TestMinitaurCostEqual.test_snapshot.185
  18.795834310416726
# ---
# name: TestMinitaurCostEqual.test_snapshot.186
  24.444872563344553
# ---
# name: TestMinitaurCostEqual.test_snapshot.187
  -7.45018926685021
# ---
# name: TestMinitaurCostEqual.test_snapshot.188
  5.14492136132931
# ---
# name: TestMinitaurCostEqual.test_snapshot.189
  5.7
# ---
# name: TestMinitaurCostEqual.test_snapshot.19
  0.6169541044703496
# ---
# name: TestMinitaurCostEqual.test_snapshot.190
  3.8843775027841305
# ---
# name: TestMinitaurCostEqual.test_snapshot.191
  3.2205320592727427
# ---
# name: TestMinitaurCostEqual.test_snapshot.192
  3.0514155101415974
# ---
# name: TestMinitaurCostEqual.test_snapshot.193
  2.080158007903896
# ---
# name: TestMinitaurCostEqual.test_snapshot.194
  0.8181289409641633
# ---
# name: TestMinitaurCostEqual.test_snapshot.195
  0.9724706139415574
# ---
# name: TestMinitaurCostEqual.test_snapshot.196
  0.006187289928265384
# ---
# name: TestMinitaurCostEqual.test_snapshot.197
  -0.017578239634415644
# ---
# name: TestMinitaurCostEqual.test_snapshot.198
  -0.0019646222878507914
# ---
# name: TestMinitaurCostEqual.test_snapshot.199
  0.9998244161821438
# ---
# name: TestMinitaurCostEqual.test_snapshot.2
  1.486254010404662
# ---
# name: TestMinitaurCostEqual.test_snapshot.20
  0.45444738007400126
# ---
# name: TestMinitaurCostEqual.test_snapshot.200
  1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.201
  -1.0058906736836641
# ---
# name: TestMinitaurCostEqual.test_snapshot.202
  -0.005890673683664233
# ---
# name: TestMinitaurCostEqual.test_snapshot.203
  1.0118160474037756
# ---
# name: TestMinitaurCostEqual.test_snapshot.204
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.205
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.206
  dict({
    'cost_drift': 0.0011858287372491253,
    'cost_shake': 0.002593163820677369,
    'cost_velocity': 1.0118160474037756,
    'energy_cost': 0.4574868338110529,
  })
# ---
# name: TestMinitaurCostEqual.test_snapshot.21
  0.42391213180303916
# ---
# name: TestMinitaurCostEqual.test_snapshot.22
  0.46479927253152703
# ---
# name: TestMinitaurCostEqual.test_snapshot.23
  0.45789504049009405
# ---
# name: TestMinitaurCostEqual.test_snapshot.24
  -0.0021500387145343826
# ---
# name: TestMinitaurCostEqual.test_snapshot.25
  0.000863217812250218
# ---
# name: TestMinitaurCostEqual.test_snapshot.26
  -0.0002786489936196694
# ---
# name: TestMinitaurCostEqual.test_snapshot.27
  0.9999972772679299
# ---
# name: TestMinitaurCostEqual.test_snapshot.28
  1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.29
  -1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.3
  1.4746404563135436
# ---
# name: TestMinitaurCostEqual.test_snapshot.30
  0.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.31
  dict({
  })
# ---
# name: TestMinitaurCostEqual.test_snapshot.32
  1.5273013017892785
# ---
# name: TestMinitaurCostEqual.test_snapshot.33
  1.5231278286826746
# ---
# name: TestMinitaurCostEqual.test_snapshot.34
  1.4049667493941906
# ---
# name: TestMinitaurCostEqual.test_snapshot.35
  1.4385761210072923
# ---
# name: TestMinitaurCostEqual.test_snapshot.36
  1.405281888521337
# ---
# name: TestMinitaurCostEqual.test_snapshot.37
  1.619926447555798
# ---
# name: TestMinitaurCostEqual.test_snapshot.38
  1.4344652906641657
# ---
# name: TestMinitaurCostEqual.test_snapshot.39
  1.5555809841265893
# ---
# name: TestMinitaurCostEqual.test_snapshot.4
  1.4959923210163817
# ---
# name: TestMinitaurCostEqual.test_snapshot.40
  1.415422211917737
# ---
# name: TestMinitaurCostEqual.test_snapshot.41
  2.9322409537036815
# ---
# name: TestMinitaurCostEqual.test_snapshot.42
  -10.990567306788762
# ---
# name: TestMinitaurCostEqual.test_snapshot.43
  -4.6288121204119905
# ---
# name: TestMinitaurCostEqual.test_snapshot.44
  -13.017550797541734
# ---
# name: TestMinitaurCostEqual.test_snapshot.45
  17.203564565236658
# ---
# name: TestMinitaurCostEqual.test_snapshot.46
  -8.366632194274024
# ---
# name: TestMinitaurCostEqual.test_snapshot.47
  8.063093644419762
# ---
# name: TestMinitaurCostEqual.test_snapshot.48
  5.7
# ---
# name: TestMinitaurCostEqual.test_snapshot.49
  4.775196021005619
# ---
# name: TestMinitaurCostEqual.test_snapshot.5
  1.5003442097217625
# ---
# name: TestMinitaurCostEqual.test_snapshot.50
  -0.8098822946051397
# ---
# name: TestMinitaurCostEqual.test_snapshot.51
  -0.36943569983676483
# ---
# name: TestMinitaurCostEqual.test_snapshot.52
  -1.6763895876361308
# ---
# name: TestMinitaurCostEqual.test_snapshot.53
  1.806652257694434
# ---
# name: TestMinitaurCostEqual.test_snapshot.54
  -0.7551495655853833
# ---
# name: TestMinitaurCostEqual.test_snapshot.55
  1.107457152881377
# ---
# name: TestMinitaurCostEqual.test_snapshot.56
  -0.0014522922606466481
# ---
# name: TestMinitaurCostEqual.test_snapshot.57
  -0.0010881361702168905
# ---
# name: TestMinitaurCostEqual.test_snapshot.58
  -0.0009161198058361459
# ---
# name: TestMinitaurCostEqual.test_snapshot.59
  0.9999979337635484
# ---
# name: TestMinitaurCostEqual.test_snapshot.6
  1.4946713778208265
# ---
# name: TestMinitaurCostEqual.test_snapshot.60
  1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.61
  -1.0713327014650966
# ---
# name: TestMinitaurCostEqual.test_snapshot.62
  -0.07133270146509657
# ---
# name: TestMinitaurCostEqual.test_snapshot.63
  1.147753757228502
# ---
# name: TestMinitaurCostEqual.test_snapshot.64
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.65
  False
# ---
# name: TestMinitaurCostEqual.test_snapshot.66
  dict({
    'cost_drift': 0.0008900027558481863,
    'cost_shake': 0.15895416214882663,
    'cost_velocity': 1.147753757228502,
    'energy_cost': 0.20166396206144432,
  })
# ---
# name: TestMinitaurCostEqual.test_snapshot.67
  1.4586963043678636
# ---
# name: TestMinitaurCostEqual.test_snapshot.68
  1.6098315038307582
# ---
# name: TestMinitaurCostEqual.test_snapshot.69
  1.3677618967187597
# ---
# name: TestMinitaurCostEqual.test_snapshot.7
  1.495840237585695
# ---
# name: TestMinitaurCostEqual.test_snapshot.70
  1.4527762697881978
# ---
# name: TestMinitaurCostEqual.test_snapshot.71
  1.416120832041941
# ---
# name: TestMinitaurCostEqual.test_snapshot.72
  1.7247459651082455
# ---
# name: TestMinitaurCostEqual.test_snapshot.73
  1.4379015596146527
# ---
# name: TestMinitaurCostEqual.test_snapshot.74
  1.5913847069004636
# ---
# name: TestMinitaurCostEqual.test_snapshot.75
  -9.94383775017649
# ---
# name: TestMinitaurCostEqual.test_snapshot.76
  16.340418493372578
# ---
# name: TestMinitaurCostEqual.test_snapshot.77
  -1.0389012894191214
# ---
# name: TestMinitaurCostEqual.test_snapshot.78
  3.262464708638372
# ---
# name: TestMinitaurCostEqual.test_snapshot.79
  5.498044263657464
# ---
# name: TestMinitaurCostEqual.test_snapshot.8
  1.0501221522620467
# ---
# name: TestMinitaurCostEqual.test_snapshot.80
  3.5689999125794483
# ---
# name: TestMinitaurCostEqual.test_snapshot.81
  0.2217681739713786
# ---
# name: TestMinitaurCostEqual.test_snapshot.82
  -0.9718621932166256
# ---
# name: TestMinitaurCostEqual.test_snapshot.83
  -1.2172762371661339
# ---
# name: TestMinitaurCostEqual.test_snapshot.84
  4.061732960977945
# ---
# name: TestMinitaurCostEqual.test_snapshot.85
  0.386457403859728
# ---
# name: TestMinitaurCostEqual.test_snapshot.86
  0.2689634259529951
# ---
# name: TestMinitaurCostEqual.test_snapshot.87
  5.7
# ---
# name: TestMinitaurCostEqual.test_snapshot.88
  -0.31999803038762237
# ---
# name: TestMinitaurCostEqual.test_snapshot.89
  2.189439098465523
# ---
# name: TestMinitaurCostEqual.test_snapshot.9
  1.0801084244609196
# ---
# name: TestMinitaurCostEqual.test_snapshot.90
  5.7
# ---
# name: TestMinitaurCostEqual.test_snapshot.91
  -0.0004593510945333464
# ---
# name: TestMinitaurCostEqual.test_snapshot.92
  -0.004677848976264771
# ---
# name: TestMinitaurCostEqual.test_snapshot.93
  -0.0013348435128684088
# ---
# name: TestMinitaurCostEqual.test_snapshot.94
  0.9999880623879084
# ---
# name: TestMinitaurCostEqual.test_snapshot.95
  1.0
# ---
# name: TestMinitaurCostEqual.test_snapshot.96
  -1.1237784519447116
# ---
# name: TestMinitaurCostEqual.test_snapshot.97
  -0.12377845194471158
# ---
# name: TestMinitaurCostEqual.test_snapshot.98
  1.2628780090552525
# ---
# name: TestMinitaurCostEqual.test_snapshot.99
  False
# ---
